--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ body {
     height: 268px;
     border-radius: 15px;
     border: 1px solid #fff !important;
-    background: #9797972E!important;
+    background: var(--color-cards)!important;
+    box-shadow: 0 4px 12px rgba(255, 255, 255, 0.456);
 }
 #fixedDiv.fixed {
     position: sticky; 
