--- a/css/reset.css
+++ b/css/reset.css
@@ -11,5 +11,6 @@
     :root {
         --color-site: #070716;
         --color-btn: linear-gradient(45deg, #3E1CF6, #241090);
+        --color-cards: #9797972E;
     }
 /*Vareaveis*/
