--- a/css/reset.css
+++ b/css/reset.css
@@ -14,5 +14,15 @@
         --color-degrad01: linear-gradient(90deg, #3E1CF6 0%, #241090 100%);
         --color-degrad02: linear-gradient(121.76deg, #DA35D1 0%, #3718DF 162.54%);
         --color-cards: #9797972E;
+        --color-bg1: rgb(8, 10, 15);
+        --color-bg2: rgb(0, 17, 32);
+        --color1: 18, 113, 255;
+        --color2: 107, 74, 255;
+        --color3: 100, 100, 255;
+        --color4: 50, 160, 220;
+        --color5: 80, 47, 122;
+        --color-interactive: 140, 100, 255;
+        --circle-size: 80%;
+        --blending: hard-light;
     }
 /*Vareaveis*/
