--- a/css/reset.css
+++ b/css/reset.css
@@ -14,15 +14,106 @@
         --color-degrad01: linear-gradient(90deg, #3E1CF6 0%, #241090 100%);
         --color-degrad02: linear-gradient(121.76deg, #DA35D1 0%, #3718DF 162.54%);
         --color-cards: #9797972E;
-        --color-bg1: rgb(8, 10, 15);
-        --color-bg2: rgb(0, 17, 32);
-        --color1: 18, 113, 255;
-        --color2: 107, 74, 255;
-        --color3: 100, 100, 255;
-        --color4: 50, 160, 220;
-        --color5: 80, 47, 122;
-        --color-interactive: 140, 100, 255;
-        --circle-size: 80%;
-        --blending: hard-light;
     }
 /*Vareaveis*/
+/*PreLaod*/
+    .boxload {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .contentt {
+        display: none;
+    }
+    ul.pre-loader {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        margin: 0;
+        padding: 0;
+    }
+    
+    ul.pre-loader li {
+        list-style: none;
+        color: #484848;
+        display: inline;
+        font-size: 5em;
+        letter-spacing: 15px;
+        animation: pre-load 3s linear infinite;
+    }
+    
+    @keyframes pre-load {
+        
+        0% {
+        color: #484848;
+        text-shadow: none;
+        }
+        
+        20% {
+        color: #484848;
+        text-shadow: none;
+        }
+        
+        40% {
+        color: #DA35D1;
+        text-shadow: 0 0 7px #DA35D1, 0 0 50px #da35d2bc;
+        }
+        
+        60% {
+        color: #484848;
+        text-shadow: none;
+        }
+        
+        80% {
+        color: #484848;
+        text-shadow: none;
+        }
+        
+        100% {
+        color: #484848;
+        text-shadow: none;
+        }
+        
+    }
+    
+    ul li:nth-child(1) {
+        animation-delay: .2s;
+    }
+    
+    ul.pre-loader li:nth-child(2) {
+        animation-delay: .4s;
+    }
+    
+    ul.pre-loader li:nth-child(3) {
+        animation-delay: .6s;
+    }
+    
+    ul.pre-loader li:nth-child(4) {
+        animation-delay: .8s;
+    }
+    
+    ul.pre-loader li:nth-child(5) {
+        animation-delay: 1s;
+    }
+    
+    ul.pre-loader li:nth-child(6) {
+        animation-delay: 1.2s;
+    }
+    
+    ul.pre-loader li:nth-child(7) {
+        animation-delay: 1.4s;
+    }
+    
+    @media screen and (max-width: 980px) {
+        
+        ul.pre-loader li {
+        font-size: 30px;
+        letter-spacing: 0;
+        }
+        
+    }
+/*PreLaod*/
