--- a/css/mobile.css
+++ b/css/mobile.css
@@ -15,7 +15,10 @@
         font-size: 1rem !important;
     }
 }
-@media (max-width: 800px)  {
+@media (max-width: 412px)  {
+    #header {
+        padding-bottom: 0px !important;
+    }
     #CardsP {
         flex-direction: column;
         align-items: center;
