--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,7 +3,10 @@
         width: 220px;
     }
 }
-@media (max-width: 412px)  {
+#Mobile {
+    display: none !important;
+}
+@media (max-width: 800px)  {
     #header {
         padding-bottom: 0px !important;
         text-align: center;
@@ -11,10 +14,10 @@
     .navbar-toggler {
         display: none !important;
     }
-    #CardsP {
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        padding: 1rem 0px !important;
+    #Mobile {
+        display: block !important;
+    }
+    #Desktop{
+        display: none !important;
     }
 }
