--- a/css/mobile.css
+++ b/css/mobile.css
@@ -13,6 +13,24 @@
     #Desktop{
         display: none !important;
     }
+    .NavMobile {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center; 
+        padding: .8rem 0px !important;
+    }
+    #btncontato {
+        background: var(--color-btn);
+        width: 160px;
+        padding: .1rem 0px !important;
+        font-size: .9rem;
+        display: flex ;
+        align-items: center;
+        justify-content: center;
+    }
+    #LogoMobile {
+            width: 140px;
+        }
     .gap {
         gap: 1rem;
     }
