--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,7 +17,7 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center; 
-        padding: .8rem 0px !important;
+        padding: 1.4rem 0px !important;
     }
     #btncontato {
         background: var(--color-btn);
