--- a/css/mobile.css
+++ b/css/mobile.css
@@ -34,6 +34,16 @@
     .gap {
         gap: 1rem;
     }
+    .Padding {
+        padding: 1.5rem 0px !important;
+    }
+    .Card00 {
+        width: 266px;
+        height: 222px;
+        border-radius: 54px 0px 0px 0px;
+        border-radius: 5px;
+        background: var(--color-degrad01);
+    }
     #CardsMobile02 {
         background: var(--color-degrad02) !important;
     }
