--- a/css/mobile.css
+++ b/css/mobile.css
@@ -47,4 +47,28 @@
     #CardsMobile02 {
         background: var(--color-degrad02) !important;
     }
+    .card02Mobile {
+        width: 355px;
+        height: 268px;
+        border-radius: 15px;
+        border: 1px solid #fff !important;
+        background: var(--color-cards)!important;
+        box-shadow: 0 4px 12px rgba(255, 255, 255, 0.456);
+    }
+    .carousel-item {
+        width: 100%;
+    }
+    .carousel-inner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .carousel-item {
+        transition: transform 0.5s ease-in-out;
+        display: flex;
+        justify-content: center; /* Centraliza o conteúdo */
+        align-items: center;
+      }
+      
+      
 }
