--- a/css/mobile.css
+++ b/css/mobile.css
@@ -54,21 +54,19 @@
         border: 1px solid #fff !important;
         background: var(--color-cards)!important;
         box-shadow: 0 4px 12px rgba(255, 255, 255, 0.456);
-    }
-    .carousel-item {
+    }    
+    .carousel-inner .carousel-item {
+        position: absolute; /* Garantir que os slides estejam na mesma posição */
+        top: 0;
+        left: 0;
         width: 100%;
-    }
-    .carousel-inner {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .carousel-item {
-        transition: transform 0.5s ease-in-out;
-        display: flex;
-        justify-content: center; /* Centraliza o conteúdo */
-        align-items: center;
+        opacity: 0;  /* Todos os itens começam invisíveis */
+        transition: opacity 0.6s ease-in-out;
       }
       
+      .carousel-inner .carousel-item.active {
+        opacity: 1; /* Apenas o slide ativo visível */
+        position: relative; /* Ajuste a camada do item ativo */
+      }
       
 }
