--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,41 @@ header {
     height: 300px;
     background: var(--color-degrad01);
 }
+
+.forms{
+    height: 45vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: .5rem !important;
+    background: #fff;
+    padding: 2rem !important;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(255, 255, 255, 0.279),
+                0 4px 12px rgba(255, 255, 255, 0.15) !important;
+}
+input, select {
+    width: 105%;
+    margin-top: 5px;
+    border: 1px solid #000000 !important;
+    border-radius: 10px;
+    padding: .2rem 2rem !important;
+}
+button {
+    width: 50%;
+    background: var(--color-btn);
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 10px !important;
+    margin-top: 15px;
+    cursor: pointer;
+    font-size: 16px;
+    padding: .2rem 2rem !important;
+
+}
