--- a/css/mobile.css
+++ b/css/mobile.css
@@ -15,8 +15,8 @@
     }
     .NavMobile {
         display: flex;
-        justify-content: space-evenly;
-        align-items: center; 
+        align-items: center;
+        justify-content: center;
         padding: 1.4rem 0px !important;
     }
     #btncontato {
